Bug 127137 - EDITING Sidebar: master slide dropdown assigns master only to the first selected slide
Summary: EDITING Sidebar: master slide dropdown assigns master only to the first selec...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.4.2 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Master-Slide
  Show dependency treegraph
 
Reported: 2019-08-24 12:51 UTC by dldld
Modified: 2020-02-03 07:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample impress document (27.91 KB, application/vnd.oasis.opendocument.presentation)
2019-09-29 12:58 UTC, dldld
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dldld 2019-08-24 12:51:40 UTC
Description:
When selecting multiple slides, and then assigning a master slide trough the master slide dropdown in the sidebar, only the first slide gets the assigned the new master slide. 

Steps to Reproduce:
1.Create multiple slides
2.Create a master slide
3.Select multiple slides and try to assign the master slide to all of them at the same time

Actual Results:
Only the first slide get's the master slide assigned

Expected Results:
All selected slides should have got the master slide assigend. Therefore every slide needs to be assigned one after each other. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.0.4.2 (x64)
Build-ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 1 Xisco Faulí 2019-09-24 11:08:04 UTC
Thank you for reporting the bug.
it seems you're using an old version of LibreOffice.
Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 2 dldld 2019-09-24 16:35:50 UTC
It also occurs in the latest Version:
Version: 6.3.1.2 (x64)
Build-ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: CL
Comment 3 dldld 2019-09-24 17:01:36 UTC
And not only on Windows Ubuntu:
Version: 6.2.6.2
Build ID: 1:6.2.6-0ubuntu0.19.04.1
CPU threads: 12; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Xisco Faulí 2019-09-25 15:14:46 UTC
Please attach a sample document, as this makes it easier for us to verify the bug. 
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
Comment 5 dldld 2019-09-29 12:58:41 UTC
Created attachment 154639 [details]
Sample impress document
Comment 6 Xisco Faulí 2020-01-20 12:02:00 UTC
You can't confirm your own bugs. Moving it back to UNCONFIRMED until someone
else confirms it.
Comment 7 dldld 2020-01-20 14:38:48 UTC
I actually looked into the code and submitted a patch for this, which may help to verfiy this bug: https://gerrit.libreoffice.org/c/core/+/85424
Comment 8 Commit Notification 2020-02-03 07:45:17 UTC
dldld committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/32cf800f88be1348bf0ad5297cf353566aeac790

tdf#127137 Allow assigning of master slide to multiple slides

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.