tdf#127137 Allow assigning of master slide to multiple slides

The old code was only able to set the master page for the first selected page which
has now been changed to be set in all currently selected pages

Change-Id: Id6826f87ed7d12abb220ea1871af06626d67112e